<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegistrationActivity">
    <ProgressBar
        android:id="@+id/pb_registration"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/progressBarStyle"
        android:progressDrawable="@drawable/custom_pb"
        android:visibility="gone"
        tools:visibility="visible"
        />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:subtitleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/red_grad"
        >

        <com.continentalbakingco.balancesheet20.utils.MTextView
            android:id="@+id/tv_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_create_account"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:id="@+id/sv_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:fillViewport="false"
        app:layout_constraintTop_toBottomOf="@id/tb_register"
        app:layout_constraintBottom_toTopOf="@id/ll_terms_and_conditions"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:boxStrokeColor="@color/green"
                >

                <com.continentalbakingco.balancesheet20.utils.MEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"

                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_first_name"
                app:boxStrokeColor="@color/green"
                >
                <com.continentalbakingco.balancesheet20.utils.MEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/et_hint_email_id"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_locator_id"
                app:boxStrokeColor="@color/green"

                >

                <com.continentalbakingco.balancesheet20.utils.MEditText
                    android:id="@+id/et_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_trn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_tax_registration_number"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_last_name"
                app:boxStrokeColor="@color/green"
                >
                <com.continentalbakingco.balancesheet20.utils.MEditText
                    android:id="@+id/et_trn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"
                    android:maxLength="9"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/ll_route_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/et_border"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_trn"
                >
                <com.continentalbakingco.balancesheet20.utils.MTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/et_textSize"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/route_assigned"
                    android:layout_marginEnd="16dp"
                    android:padding="@dimen/et_padding"
                    />
                <Spinner
                    android:id="@+id/sp_route_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:foregroundTint="@color/red_500"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_location_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/et_border"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_route_id"
                >
                <com.continentalbakingco.balancesheet20.utils.MTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/et_textSize"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/service_location"
                    android:layout_marginEnd="16dp"
                    android:padding="@dimen/et_padding"
                    />
                <Spinner
                    android:id="@+id/sp_location_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:foregroundTint="@color/red_500"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_locator_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/et_border"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_location_id"
                >
                <com.continentalbakingco.balancesheet20.utils.MTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/et_textSize"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/location"
                    android:layout_marginEnd="16dp"
                    android:padding="@dimen/et_padding"
                    tools:ignore="HardcodedText" />
                <Spinner
                    android:id="@+id/sp_locator_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:foregroundTint="@color/red_500"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/et_hint_password"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_email_id"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@color/green"
                >
                <com.continentalbakingco.balancesheet20.utils.MEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_confirm_password"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@color/green"
                >
                <com.continentalbakingco.balancesheet20.utils.MEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_terms_and_conditions"
        android:layout_width="374dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_register"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <com.continentalbakingco.balancesheet20.utils.MTextView
            android:id="@+id/tv_terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/terms_and_conditions_agreement"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/txt_terms_condition_textSize"
            android:textStyle="bold" />
    </LinearLayout>
    <com.continentalbakingco.balancesheet20.utils.VButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_main_background"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_terms_and_conditions"
        app:layout_constraintBottom_toTopOf="@id/ll_already_registered"
        android:text="@string/btn_lbl_register"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        />
    <LinearLayout
        android:id="@+id/ll_already_registered"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,6:1">

        <TextView
            android:id="@+id/tv_already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/txt_terms_condition_textSize"
            android:text="@string/already_have_an_account"
            />
        <com.continentalbakingco.balancesheet20.utils.MTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/txt_terms_condition_textSize"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

